[package]
name = "lua-host"
version = "0.1.0"
edition = "2021"

[dependencies]
lua-protocol = { path = "../lua-protocol" }
anyhow = "1"
thiserror = "1"
libc = "0.2"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "process", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
